# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  06 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  +modules/catalyst/__init__.py:
  Add __init__.py file and import line

  06 Sep 2008; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  +modules/catalyst/spec.py:
  Initial commit of modules/catalyst/spec.py

  30 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> arch/amd64.py,
  arch/x86.py:
  Updating x86/amd64 arch support. Original patches by William Cooke
  <gentoo@wcooke.org> and reported to Gentoo bug #224429, modified by me.

  28 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
  modules/snapshot_target.py, modules/stage4_target.py,
  targets/support/bootloader-setup.sh, targets/support/functions.sh,
  targets/support/kmerge.sh:
  Removing all deprecated interfaces. We no longer wish to support them and
  they're not needed. Anyone using a pre-2.x spec file will need to update
  their specs, anyway.

  24 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  -livecd/files/Getting_Online.txt:
  Removing livecd/files/Getting_Online.txt since it was quite outdated.

  24 Jul 2008; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO, catalyst,
  README:
  Updated for new git repo.

  29 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> TODO, catalyst,
  targets/support/livecdfs-update.sh:
  Add gconf settings for gnome-screensaver to disable locking by default. This
  is 2.0.6 final.

  14 May 2008; Andrew Gaffney <agaffney@gentoo.org> arch/arm.py:
  Add armv5tel to arm host list

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  If we don't have a distcc user, we need to reinstall distcc, even if it's
  been built with the right USE. This mainly affects stage1/stage2.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh: